--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: #ffffff;
     color: #542211 ;
-        font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -43,7 +41,8 @@ nav ul li a {
     text-decoration: none;
     border-radius: 10px;
     align-items: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Outfit', sans-serif;
+    font-size: 19px;
 }
 
 
@@ -69,8 +68,6 @@ nav ul li a:active {
     height: 350px;
     width: 100vw;
     background-color:#47B29E;
-
-
 }
 
 .banner img {
@@ -78,18 +75,33 @@ nav ul li a:active {
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
 
 
+
+
+
+
+.banner2{
+    position: relative;
+    height: 350px;
+    width: 100%;
+    background-color:#47B29E;
+}
+
+.banner2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 main {
-
     padding-right: 17%;
     padding-left: 17%;
     background: white;
     max-width: 1250px;
     margin: 20px auto;
-
 }
 
 main h2 {
@@ -118,11 +130,16 @@ main h2 {
     height: auto;
 }
 
-
 .novedad img {
     width: 100%;
     height: auto;
     object-position: center;
+}
+
+.novedad p {
+    color: #542211 ;
+    font-family: 'Outfit', sans-serif;
+    font-size: 19px;
 }
 
 .novedad img:hover {
@@ -130,18 +147,45 @@ main h2 {
     transition: 0.3s;
 }
 
-.novedad h3 {
-    margin: 10px 0 5px 0;
-    color: #542211;
-    font-size: 1.2em;
+
+.descripcion{
+    display: flex;
+    justify-content: space-between;
+    margin: 20px auto;
+    padding: 20px;
+    background: #f0f0f0;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
 }
 
-.texto-novedad{
-    text-align: center;
+.texto{
+    flex: 2;
+    padding: 20px;
+    font-family: 'Outfit', sans-serif;
 }
+
+.foto1{
+    flex: 1;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.foto1 img{
+    height: 500px;
+    width: auto;
+    box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1) ;
+}
+
+
 .esto{
     display: flex;
-    justify-content:center;
+    justify-content:space-around;
+    background:#F4AD21;
+    margin: 0 auto;
+    font-family: 'Outfit', sans-serif;
+    padding-right: 17%;
+    padding-left: 17%;
 }
 
 .info{
@@ -150,11 +194,23 @@ main h2 {
 }
 
 footer {
-    background: #F4AD21;
+    background:#542211;
     color: white;
     text-align: center;
-    padding: 1rem;
+    margin-bottom: 0 auto;
+}
+
+
+.footer-botton {
+    background:#542211;
+    color: white;
+    text-align: center;
     margin-top: 20px;
+}
+
+.footer-botton p{
+    padding: 10px;
+    font-family: 'Outfit', sans-serif;
 }
 
 
@@ -173,3 +229,9 @@ footer {
     margin-bottom: 10px;
     border-radius: 10px 10px 0 0;
 }
+
+.info img {
+    height: 100px;
+    width: auto;
+}
+
