--- a/styles/headerfooter.css
+++ b/styles/headerfooter.css
@@ -3,6 +3,10 @@
     margin: 0;
 }
 
+.focus{
+    color: #47B29E;
+}
+
 header {
     margin: 0;
     width: 100vw;
@@ -18,7 +22,7 @@ header {
     position: sticky;
     top: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.904);
+    background-color: rgba(255, 255, 255, 0.959);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
