avance web andupan

--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -158,7 +158,7 @@ input[type="text"]:focus{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/images/Estanteria-mostrador-pan-casadiella-y-cafe.jpg");
+    background-image: url("/images/banner/DSC_0504.jpg");
     background-size: cover;
     background-position: center;
     transition: 2s ease-in-out;
