--- a/styles/puntos_venta.css
+++ b/styles/puntos_venta.css
@@ -16,16 +16,18 @@ main{
     flex-wrap: wrap;
     gap: 1em;
     margin: 1em;
-    justify-content: center;
+    width: 80%;
 }
 
-.tarjeta{
-    width: 200px;
+.tarjeta {
+    flex: 1 1 300px;
+    max-width: 200px;
     height: 260px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.377);
+    background-color: #fff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    
+    overflow: hidden;
+    transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
 }
 
 .tarjeta:hover .color{
@@ -52,7 +54,7 @@ main{
 
 .color img{
     display: none;
-    width: 12em;
+    width: 100%;
 }
 
 .info{
@@ -92,7 +94,7 @@ main{
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url("/images/Estanteria-mostrador-pan-casadiella-y-cafe.jpg");
+    background-image: url("/images/banner/Estanteria-mostrador-pan-casadiella-y-cafe.jpg");
     background-size: cover;
     background-position: center;
     transition: 2s ease-in-out;
@@ -108,7 +110,7 @@ main{
     text-align: center;
     color: white;
     z-index: 10;
-    max-width: 600px;
+    min-width: 600px;
     padding: 20px;
     background-color: #0c0c0cbe;
     border-radius: 30px;
@@ -144,13 +146,24 @@ main{
 
 iframe{
     width: 70%;
+    height: 500px;
     margin-bottom: 2em;
 }
 
+h2{
+    margin-top: 1em;
+    width: 80%;
+    color: #47B29E;
+    font-size: 2.5em;
+}
 
-h3{
-    color: #542211;
+h4{
+    color:#F4AD21;
     margin: 0em;
     margin-top: 0.5em;
-    font-size: 3em;
+    font-size: 2em;
+}
+
+iframe{
+    width: 80%;
 }
