--- a/styles/estilos.css
+++ b/styles/estilos.css
@@ -188,3 +188,20 @@ main h2 {
     box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1) ;
 }
 
+@media (max-width: 768px){
+    main{
+        padding-right: 5%;
+        padding-left: 5%;
+        gap: 1em;
+    }
+
+    .novedad{
+        width: 45%;
+        margin-bottom: 20px;
+    }
+
+    .descripcion{
+        flex-direction: column;
+    }
+    
+}
