--- a/styles/headerfooter.css
+++ b/styles/headerfooter.css
@@ -65,7 +65,7 @@ header {
 
 .hheader nav ul li a {
     padding: 20px;
-    color: #F4AD21;
+    color: #d66800;
     text-decoration: none;
     border-radius: 10px;
     align-items: center;
