--- a/styles/productos.css
+++ b/styles/productos.css
@@ -52,7 +52,7 @@ main {
 }
 
 .navegacion-categorias button {
-    background:#F4AD21;
+    background:#d66800;
     color: #FAF0E6;
     border: none;
     padding: 0.5em 20px;
