--- a/styles/puntos_venta.css
+++ b/styles/puntos_venta.css
@@ -62,7 +62,7 @@ main{
 }
 
 .tlf{
-    color: #F4AD21;
+    color: #d66800;
 }
 
 .tlf img{
@@ -72,7 +72,7 @@ main{
 }
 
 .nombre{
-    color: #F4AD21;
+    color: #d66800;
     font-size: 1.3em;
 }
 
@@ -153,7 +153,7 @@ iframe{
 h2{
     margin-top: 1em;
     width: 80%;
-    color: #47B29E;
+    color:#d66800;
     font-size: 2.5em;
 }
 
