--- a/styles/sobre_nosotros.css
+++ b/styles/sobre_nosotros.css
@@ -60,8 +60,8 @@ main {
 }
 
 .seccion-texto h2 {
-    font-size: 3rem;
-    color:#F4AD21;
+    font-size: 2.3rem;
+    color:#d66800;
     position: relative;
 }
 
@@ -110,6 +110,7 @@ main {
 .valor-item p {
     font-size: 1rem;
     color: #6D544C;
+    text-align: left;
 }
 
 
